fix margins on mobile display

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -124,9 +124,16 @@ button {
   font-family: "benton-sans";
 }
 
+@media screen and (max-width: 900px) {
+  button {
+    font-size: 12px;
+    padding: 3px 5px;
+  }
+}
+
 @media screen and (max-width: 600px) {
-  .button {
-    font-size: 13px;
-    padding: 10px 20px;
+  button {
+    font-size: 10px;
+    padding: 3px 5px;
   }
 }
