--- a/src/scss/_story.css
+++ b/src/scss/_story.css
@@ -15,6 +15,11 @@
     font-family: "benton-sans";
     line-height: 24px;
     margin-bottom: 20px; /*TODO*/
+
+    @media (max-width: 600px) {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
 
 .story strong {
@@ -63,6 +68,10 @@
     font-family: "tiempos";
     font-size: 22px;
     font-weight: normal;
+
+    @media (max-width: 600px) {
+        font-size: 16px;
+    }
 }
 
 .story p ~ h1 {
