--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -147,3 +147,11 @@ hr {
     }
   }
 }
+
+@media screen and (max-width: 600px) {
+  #line {
+    svg {
+      zoom: 0.55;
+    }
+  }
+}
